--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,69 @@
-@charset "utf-8";
-/* 모든문서 시작시 스타일 초기화*/
+@charset "UTF-8";
+@import "./reset.css";
+/* 유인물 1~4번 항목 설정 */
+html { font-size: 16px; }
+body {
+	font-family: "Roboto Condensed", "Noto Sans KR", sans-serif;
+	color: #fff;
+	font-size: 14px;
+	background-color: #4f0600;	
+}
+.d-none {
+	display: none;
+}
+.top-bar-outer {
+	background-color: white;
+}
+.top-bar {
+	max-width: 800px;
+	margin: 0 auto;	
+	display: flex;
+	justify-content: space-between; /* 수평정렬 : 양끝 */
+	align-items: center; /* 수직정렬: 중앙 */
+}
+.top-menu a {
+	font-size: 14px;
+	color: #666666;
+	text-decoration: none; /* 텍스트-꾸밈(밑줄) : 없음 */
+}
+.top-menu a:nth-child(2){ /* 두번째 a를 선택, 좌우 여백 추가 */
+	margin: 0 1rem;
+}
+.marketing-outer {
+	background-color: white;
+}
+.marketing {
+	max-width: 800px;
+	margin: 0 auto;	
+	display: flex;
+	justify-content: space-between; /* 수평정렬 : 양끝 */
+}
+.text p {
+	color: black
+}	
+.text p:nth-child(1) {
+margin-bottom: 3rem; 
+font-size: 5rem;
+position: relative;
+top: 0px;
+right: 10%;
+}
+.text p:nth-child(2) {
+margin-bottom: 3rem; 
+font-size: 10rem;
+position: relative;
+top: 5px;
+right: 7%;
+}
+.text p:nth-child(3) {
+margin-bottom: 3rem; 
+font-size: 10rem;
+position: relative;
+position: absolute;
+top: 100px;
+right: 7%;
+}
 
-margin:0;
-padding:0;
+
+
 
