--- a/css/style.css
+++ b/css/style.css
@@ -31,39 +31,63 @@ body {
 }
 .marketing-outer {
 	background-color: white;
+	height: 500px;
 }
 .marketing {
 	max-width: 800px;
 	margin: 0 auto;	
 	display: flex;
 	justify-content: space-between; /* 수평정렬 : 양끝 */
+	position: relative;
+	top: 135px;
+}
+.text {
+	width: 300px;
+	position: relative
 }
 .text p {
 	color: black
-}	
+}
 .text p:nth-child(1) {
-margin-bottom: 3rem; 
-font-size: 5rem;
-position: relative;
-top: 0px;
-right: 10%;
+	font-size: 60px;
+	color: #000000; /* 000 */
+	position: absolute;
+	left:0px;
+	top:70px;
+	
 }
 .text p:nth-child(2) {
-margin-bottom: 3rem; 
-font-size: 10rem;
-position: relative;
-top: 5px;
-right: 7%;
+	font-size: 60px;
+	color: #cf160c;
+	position: absolute;
+	left: 0;
+	top: 130px;
 }
 .text p:nth-child(3) {
-margin-bottom: 3rem; 
-font-size: 10rem;
-position: relative;
-position: absolute;
-top: 100px;
-right: 7%;
+	font-size: 90px;
+	color: #000000; /* 000 */
+	position: absolute;
+	left: 100px;
+	top: 130px;	
 }
 
+.menu-outer {
+	background-color: #830e04;
+	padding: 1rem 0;	
+}
+.menu {
+	max-width: 800px;
+	margin: 0 auto;
+	text-align: right
+}
+.menu a {
+	color: #ffffff; /* white */
+	text-decoration: none;
+	cursor: pointer;
+}
+.menu a:nth-child(2) {
+	margin: 0 1rem
+}
 
 
 
